--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,10 @@ body {
 .flex-element:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
+
 }
+
 
 /* .flex-element:nth-child(3n) {
 margin-right: 0px;
@@ -489,6 +492,8 @@ padding-bottom: 34px;
 .pointer {
   cursor: pointer;
 }
+
+
 
 .button {
   display: inline-block;
