--- a/css/styles.css
+++ b/css/styles.css
@@ -488,6 +488,72 @@ padding-bottom: 34px;
   background-position: center;
 }
 
+/* --------------------------MODAL WINDOW------------------- */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+  padding: 8px 8px 0 0;
+
+
+  background: #FFFFFF;
+  box-shadow: 
+  0px 1px 3px rgba(0, 0, 0, 0.12), 
+  0px 1px 1px rgba(0, 0, 0, 0.14), 
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+}
+
+
+
+.modal-btn-close {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    border-radius: 50%;
+    background-color: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+/* 
+.footer-icon-logo {
+  fill: #ffffff;
+}
+
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+  background-color: rgba(33, 150, 243, 1);
+  border-color: #ffffff;
+}
+*/
+
+
+
+
 /* -----------------BUTTONS--------------------- */
 .pointer {
   cursor: pointer;
@@ -528,6 +594,17 @@ padding-bottom: 34px;
   line-height: 1.88;
   letter-spacing: 0.06em;
   box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+}
+
+.button.primary:hover,
+.button.primary:focus {
+  color:var(--accent-color);
+  background-color:#ffffff;
+  box-shadow: 
+  0px 3px 1px rgba(0, 0, 0, 0.1), 
+  0px 1px 2px rgba(0, 0, 0, 0.08),
+  0px 2px 2px rgba(0, 0, 0, 0.12);
+
 }
 
 .button.secondary {
