--- a/css/styles.css
+++ b/css/styles.css
@@ -89,12 +89,7 @@ body {
 .image-thumb {
   position: relative;
   overflow: hidden;
-  
 }
-
-
-
-
 
 .overlay-portfolio {
   position: absolute;
@@ -117,7 +112,7 @@ body {
 }
 
 .overlay-text {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -125,7 +120,6 @@ body {
   letter-spacing: 0.03em;
   color: #ffffff;
 }
-
 
 /* .portfolio-thumb {
   display: inline-block;
@@ -208,9 +202,6 @@ body {
 
 */
 
-
-
-
 /* ---------------- PORTFOLIO CONTAINERS ------------ */
 .flex-list {
   display: flex;
@@ -222,18 +213,15 @@ body {
 .flex-element {
   width: calc((100% - 60px) / 3);
 
-  transition: 
-  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .flex-element:hover,
 .flex-element:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-    cursor: pointer;
-
+  cursor: pointer;
 }
-
 
 /* .flex-element:nth-child(3n) {
 margin-right: 0px;
@@ -296,7 +284,6 @@ padding-bottom: 0px;
   gap: 10px;
 }
 
-
 /* Remove Text Decorations */
 
 .list {
@@ -309,8 +296,7 @@ padding-bottom: 0px;
   text-decoration: none;
   color: inherit;
 
-  transition: 
-  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .link {
@@ -318,7 +304,6 @@ padding-bottom: 0px;
   padding-top: 32px;
   padding-bottom: 32px;
   position: relative;
-
 
   color: var(--title-text-color);
   font-weight: 500;
@@ -419,8 +404,7 @@ padding-bottom: 34px;
   letter-spacing: 0.02em;
   text-decoration: none;
 
-  transition: 
-  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .email:hover,
@@ -435,8 +419,7 @@ padding-bottom: 34px;
   letter-spacing: 0.02em;
   text-decoration: none;
 
-  transition: 
-  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .phone:hover,
@@ -495,13 +478,17 @@ padding-bottom: 34px;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color:rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
+  z-index: 1;
+
+  transition: opacity 500ms, visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -514,30 +501,27 @@ padding-bottom: 34px;
   height: 581px;
   padding: 8px 8px 0 0;
 
-
-  background: #FFFFFF;
-  box-shadow: 
-  0px 1px 3px rgba(0, 0, 0, 0.12), 
-  0px 1px 1px rgba(0, 0, 0, 0.14), 
-  0px 2px 1px rgba(0, 0, 0, 0.2);
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-
 }
 
-
-
 .modal-btn-close {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    border-radius: 50%;
-    background-color: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    cursor: pointer;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  border-radius: 50%;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  fill: none;
 }
 /* 
 .footer-icon-logo {
@@ -551,15 +535,10 @@ padding-bottom: 34px;
 }
 */
 
-
-
-
 /* -----------------BUTTONS--------------------- */
 .pointer {
   cursor: pointer;
 }
-
-
 
 .button {
   display: inline-block;
@@ -574,9 +553,9 @@ padding-bottom: 34px;
   display: inline-block;
   border: 1px solid black;
 
-
   transition: 
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.primary {
@@ -593,18 +572,19 @@ padding-bottom: 34px;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  box-shadow: 0px 4px 4px rgb(0 0 0 15%);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.primary:hover,
 .button.primary:focus {
-  color:var(--accent-color);
-  background-color:#ffffff;
-  box-shadow: 
-  0px 3px 1px rgba(0, 0, 0, 0.1), 
-  0px 1px 2px rgba(0, 0, 0, 0.08),
-  0px 2px 2px rgba(0, 0, 0, 0.12);
+  background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
+  /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .button.secondary {
@@ -742,22 +722,21 @@ padding-bottom: 34px;
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 70px;
   margin: 0;
   padding: 27px 0px;
-  text-align: center;
+
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  
   background: rgba(47, 48, 58, 0.8);
+  font-weight: 700;
+  line-height: 1.14px;
+  text-transform: uppercase;
+  color: #ffffff;
 
-
-font-weight: 700;
-line-height: 1.14px;
-text-transform: uppercase;
-color: #FFFFFF;
 }
-
-
-
-
-
 
 .feature-list-about {
   display: flex;
@@ -825,6 +804,7 @@ margin-right: 0;
 .team-soc-link {
   width: 100%;
   height: 100%;
+  fill: currentColor;
   background-color: #ffffff;
   border-radius: 50%;
   display: flex;
@@ -833,6 +813,7 @@ margin-right: 0;
 
   transition: 
   background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .team-soc-link:hover,
@@ -842,6 +823,8 @@ margin-right: 0;
 
 .team-soc-icon {
   fill: #afb1b8;
+  transition: 
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-link:hover .team-soc-icon {
@@ -941,9 +924,8 @@ margin-right: 0;
   border: 1px solid #afb1b8;
   border-radius: 4px;
 
-  transition: 
-  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .client-logo-link:hover,
 .client-logo-link:focus {
@@ -1000,7 +982,6 @@ margin-right: 0;
   padding-top: 60px;
   padding-bottom: 60px;
 }
-
 
 .footer-address {
   display: block;
@@ -1076,15 +1057,17 @@ margin-right: 0;
   justify-content: center;
   width: 44px;
   height: 44px;
+  fill: currentColor;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
 
-  transition: 
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon-logo {
   fill: #ffffff;
+  transition: 
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon-link:hover,
