--- a/css/styles.css
+++ b/css/styles.css
@@ -106,14 +106,16 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.flex-element:hover .overlay-portfolio,
-.flex-element:focus .overlay-portfolio {
+
+.portfolio-link:hover .overlay-portfolio,
+.portfolio-link:focus .overlay-portfolio {
   transform: translateY(0%);
+  box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 
+  0px 4px 4px rgb(0 0 0 / 6%), 
+  1px 4px 6px rgb(0 0 0 / 16%);
+  cursor: pointer;
 }
 
-.portfolio-link:focus {
-
-}
 
 .overlay-text {
   font-family: "Roboto";
@@ -135,7 +137,6 @@ body {
 
 .flex-element {
   width: calc((100% - 60px) / 3);
-
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -146,9 +147,6 @@ body {
   cursor: pointer;
 }
 
-/* .flex-element:nth-child(3n) {
-margin-right: 0px;
-} */
 
 .flex-element:nth-last-child(-n + 3) {
   margin-bottom: 0px;
